--- a/back/package.json
+++ b/back/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
@@ -18,7 +19,8 @@
     "mysql2": "^3.6.0",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
-    "sequelize": "^6.32.1"
+    "sequelize": "^6.32.1",
+    "sequelize-bcrypt": "^1.2.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
