--- a/back/package.json
+++ b/back/package.json
@@ -19,8 +19,7 @@
     "mysql2": "^3.6.0",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
-    "sequelize": "^6.32.1",
-    "sequelize-bcrypt": "^1.2.0"
+    "sequelize": "^6.32.1"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
